apps/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: grafana
    namespace: observability
    annotations:
        glance/icon: di:grafana
        glance/name: "Grafana"
        glance/url: https://dash.realtong.cn
        nginx.ingress.kubernetes.io/ssl-redirect: "true"
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
        nginx.ingress.kubernetes.io/proxy-body-size: "25m"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
        nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - dash.realtong.cn
    rules:
        - host: dash.realtong.cn
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: grafana
                            port:
                                number: 3000
